добавил бланк страницы направления

--- a/source/sitemap.html
+++ b/source/sitemap.html
@@ -49,7 +49,7 @@
                 <a href="./index.html">Главная — index.html</a>
               </li>
               <li>
-                <a href="#!">Направления — <i>страница в разработке</i></a>
+                <a href="./departures.html">Направления — <i>страница в разработке</i></a>
               </li>
             </ol>
           </div>
